--- a/Portfolio/src/components/CV/cv.css
+++ b/Portfolio/src/components/CV/cv.css
@@ -22,7 +22,7 @@ body {
   font-family: 'Courier New', Courier, monospace;
   font-size: 30px;
   background:rgb(0, 187, 255);  border-radius: 15px 15px 15px 15px;
-  color:#00e677;
+  color:#173045;
   -webkit-border-radius: 30px 29px 29px 29px;
   -moz-border-radius: 30px 29px 29px 29px;
   box-shadow: 10px 3px 42px 6px rgba(0, 0, 0, 0.75);
