--- a/Portfolio/src/components/CV/proyectos.css
+++ b/Portfolio/src/components/CV/proyectos.css
@@ -71,3 +71,12 @@
     -moz-box-shadow: 10px 3px 42px 6px rgba(0, 0, 0, 0.75);
     color:bisque;
 }
+
+.tituloo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Courier New', Courier, monospace;
+    text-shadow: 4px 4px 2px rgba(215,241,46,0.88);
+    font-size: 2rem;
+}
