--- a/Portfolio/src/components/CV/experiencia.css
+++ b/Portfolio/src/components/CV/experiencia.css
@@ -62,6 +62,10 @@
     color:bisque;
 }
 
+.Soldado{
+    color:azure
+}
+
 .Ya{
     background-color: black;
     border-radius: 30px 29px 29px 29px;
@@ -72,4 +76,13 @@
     -moz-box-shadow: 10px 3px 42px 6px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 10px 3px 42px 6px rgba(0, 0, 0, 0.75);
     color:bisque;
+}
+
+.titulo_Exp{
+    font-size: 3rem;
+    font-family: 'Courier New', Courier, monospace;
+    padding-right: 8rem;
+    margin: 2rem;
+    margin-bottom: 1rem;
+    text-shadow: 4px 4px 2px rgba(215,241,46,0.88);
 }
