--- a/Portfolio/src/components/contacto/Contact.css
+++ b/Portfolio/src/components/contacto/Contact.css
@@ -47,6 +47,8 @@ h1 {
 }
 .titu{
   font-family: 'Courier New', Courier, monospace;
+  text-shadow: 4px 4px 2px rgba(215,241,46,0.88);
+  font-size: 2rem;
 }
 
 hr {
